--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "max-npm-quality",
-  "version": "1.0.11",
+  "version": "1.0.21",
   "description": "Optimize the quality score of your package on npmjs.org",
   "repository": {
     "type": "git",
@@ -10,13 +10,16 @@
   "main": "index.js",
   "scripts": {
     "test": "jest",
-    "build": "tsc --declaration index.ts"
+    "build": "tsc --project tsconfig.json && rollup -c"
   },
   "files": [
     "index.js",
     "package.json",
     "README.md",
-    "index.test.ts"
+    "tsconfig.json",
+    "jest.config.js",
+    "test/*",
+    "src/*"
   ],
   "keywords": [
     "sum",
@@ -31,6 +34,9 @@
   "devDependencies": {
     "@jest/globals": "^29.6.4",
     "jest": "^29.6.4",
-    "ts-jest": "^29.1.1"
+    "ts-jest": "^29.1.1",
+    "@rollup/plugin-commonjs": "^21.0.1",
+    "rollup-plugin-dts": "4.0.1",
+    "rollup": "2.61.1"
   }
 }
