--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "max-npm-quality",
-  "version": "1.0.21",
-  "version": "1.0.18",
+  "version": "1.0.25",
   "description": "Optimize the quality score of your package on npmjs.org",
   "repository": {
     "type": "git",
@@ -20,7 +19,8 @@
     "tsconfig.json",
     "jest.config.js",
     "test/*",
-    "src/*"
+    "src/*",
+    ".github/workflows/build.yml"
   ],
   "keywords": [
     "sum",
@@ -38,6 +38,7 @@
     "ts-jest": "^29.1.1",
     "@rollup/plugin-commonjs": "^21.0.1",
     "rollup-plugin-dts": "4.0.1",
-    "rollup": "2.61.1"
+    "rollup": "2.61.1",
+    "tslint": "^5.20.1"
   }
 }
